wp-content/themes/enfold/css/custom.css
/* ... */
/*
Desktop Styles
================================================== */
/* Note: Add new css to the media query below that you want to only effect the desktop view of your site */

@media only screen and (min-width:768px) and (max-width:1023px){
#top #header .mega_menu_title a{width:145px !important; }
/* .logo img{width:80% !important; } */
#socket .sub_menu_socket li{display: inline-block; float: none; padding: 0; width: 130px; border-left:medium none; }
div .products .product a:hover{background-color:transparent !important; }
.products .thumbnail_container{height:auto; }
.clsTopList li{width:50%; margin-bottom:20px; }
.clsTopList li a:hover{background-color:transparent; }
.model .clsModel{margin-bottom:20px; }
.clsExc{margin:10px 0; }
td.actions .coupon{width:49%; }
#top .custom_table.shop_table .actions .coupon .input-text{margin-right:7px; }
#top div td.actions .coupon .input-text, #top table.shop_table .actions .coupon .button{width:48%; min-width:0; }
table.shop_table .product-remove, table.shop_table .product-thumbnail{display:table-cell; }
#top table.shop_table .actions .button, #top .actions .checkout-button.button.alt{min-width:0; width:24%; float:left; }
a:hover, a:focus{background-color:transparent; }
#socket .menu{margin-top:0; }
}

@media only screen and (min-width:1024px) {
a:hover, a:focus{background-color:transparent; }
.clsRelTitle{width:105px; }
}

.template-shop .product_meta
{
top:0px;
margin-bottom:10px;
display:none;
}
.single_variation_wrap{
margin:10px;
}
div.product p.stock
{
padding:0 0px;
margin:5px 15px;
}
.template-shop .single-product-main-image .images a{
border-style:none;
}
span.onsale{display:none;}
div form.cart table{text-align:left;}
.variations tr:nth-child(2n){
color:#000000;
}
.main_color table.variations
{
background-color:none;
}
#top .variations_form {
background-color:transparent;
border-style:none;
padding:0px;
}
button.single_add_to_cart_button{
background-color: #00a14f !important;
}
.woocommerce-page .button.single_add_to_cart_button{
padding:10px !important;
}
#top div .quantity input.plus, #top div .quantity input.minus {
height:auto;
line-height:30px;
}
#top div .quantity input.qty{
width:35px !important;
line-height:30px;
height:auto;
}
.single-product-main-image .thumbnails{
display:none;
}
.main_color tr:nth-child(2n+1), .main_color .pricing-table > li:nth-child(2n+1), .main_color .pricing-extra{
background-color:transparent;
}
.single_variation{
margin:10px;
padding:10px;
background-color:#f8f8f8;
}
.single_variation .amount{
font-size:16px;
}
.single_variation p{
padding:5px;
margin:0px;
}
/*
Mobile Styles
================================================== */
/* Note: Add new css to the media query below that you want to only effect the Mobile and Tablet Portrait view */

@media only screen and (max-width:767px) {
  /* Add your Mobile Styles here */
.chosen-container {
	width:270px!important;
  }
  .page-id-7116 #main #formulariologin .av_two_third form p{margin:0;}
  .page-id-7116 #main #formulariologin .av_two_third form #billing_country_chosen{padding-right:52px;}
  #simplr-form  .checkbox{width:auto !important;}
}
@media only screen and (min-width:768px) and (max-width:980px) {
	.chosen-container {
	 width:210px!important;
  }
  .page-id-7116 #main #formulariologin .av_two_third form p{margin:0 0 10px;}
  .page-id-7116 #main #formulariologin .av_two_third form #billing_country_chosen{padding-right:26px;}
}

@media only screen and (min-width:1280px) and (max-width:1290px) {
	.chosen-container {
	 width:315px!important;
  }
}

@media only screen and (min-width:990px) {
	.cart_dropdown.visible_cart {
		top: 25px;
    right: 10px;
	}
}
input[type="submit"], #submit, .button {
	border-radius: 0px;
}

.form-row input[type="submit"], #submit{
	border-radius: 2px;
	color:#ffffff;
	background-color:#666666;
	padding: 9px 54px!important;
	font-size:14px;
}
.login .form-row{padding:3px 14px 0 0 !important;}
.login .form-row label{font-size:17px !important;margin-bottom:7px; font-weight:unset !important;}
.login .form-row input[type="submit"], #submit{
	border-radius: 0px;
	color:#919191;
	background-color:#F9F9FA;
	padding: 4px 15px!important;
	font-size:13px;
}
.login h2{color:#87898d;}
.button {
	border-radius: 0px;
	color:#ffffff;
	background-color:#666666;
	padding: 0px 0px!important;
	font-size:14px;
}

.woocommerce .form-row input[type="submit"], #submit,  {
  margin-top:0px;
padding: 13px 54px!important;
}
.button {
    margin-top: 0px;
    padding: 1px 5px !important;
}

#top .form-row label{
	font-size:14px;
  color:#666666;
}
 .inline{
	 font-weight:normal!important;
  color:#6D6D6D;
}
.lost_password a{
	color:#6D6D6D;
}
.lost_reset_password .input-text{
	padding:4px !important;
	border-radius:5px;
}
.page-id-7116 .lost_reset_password input[type="submit"]{
	padding:8px 8px !important;
	color:#919191;
	background-color:#f5f5f5;
}	

.sub-menu .avia-menu-text{
	padding:4px;
	font-family: 'myriad_set_promedium';
}
.sub-menu{
	/*min-width: 84px;*/
	min-width:100% !important;
}

.entry-summary  .single_variation_wrap{
	display:none!important;
}

.nameset{
	background-color:none;
	font-size:12px;
	font-weight:bold;
	/* color:#282828; */
	color:#56656d; 
	display:block;
}
.adminset{
	padding: 0px 0px;
	display: inline-block;
	line-height: 12px;
	margin-top: 19px;
	/*margin-left: -30px; */ /* Do not uncomment this is needed for 15inch screen */
	font-family: 'myriad_set_promedium';
}
.linkcolor a{
	/*color:#282828; */ /*Keeping As per design */
	color:#8E8E8E;
	display:inline-block;
  font-weight: bold;
  font-size: 10px;
}
#customer_login {
	padding-top:100px;
}

#av_section_3 {
    position: relative;
    z-index: -1;
}
.woocommerce  #customer_login{
	 margin-left: -50px;
   margin-top: -30px;
   margin-right: 30px;
}
#top form.login {
    margin-bottom: 100px;
}
.template-page .entry-content-wrapper .col-lg-offset-3{
	  border:none;
}

#top .chosen-container-single .chosen-single{
	 height:35px;
}
/* ... */

